@@ -1,3 +1,6 @@
+- Fixed issue #14754: ezcWorkflowNodeVariableSet::configurationFromXML() error.
+
+
 1.3.2 - Monday 30 March 2009
 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 
